--- a/BankUI/src/components/Landing Page/HomePage.css
+++ b/BankUI/src/components/Landing Page/HomePage.css
@@ -10,7 +10,7 @@
     /* height: 4%; */
   }
   .custom-icon-color {
-    color: white !important;
+    color: #091723 !important;
   }
   .logo1 > img {
     width: 2rem;
