--- a/BankUI/src/components/Table/Table.css
+++ b/BankUI/src/components/Table/Table.css
@@ -33,14 +33,15 @@
   
   @media screen and (max-width: 768px) {
     .Table{
-      margin-top: 7rem;
+      margin-top: 0;
+      margin-bottom: 25rem;
       position: relative;
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
+      margin-left: 4rem;
       width: 23rem;
     }
-    .Table h3 {
-      margin-top: 7rem;
-    }
+    
   }
